--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node app.js"
   },
+	"engines": {
+		"node": "0.10.21",
+		"npm": "1.3.x"
+	},
   "dependencies": {
     "express": "3.4.2",
     "ejs": "*",
